# ester-assets

./: README.md  ester-wallpapers.xml  installextension.py  org.gnome.shell.extensions.blur-my-shell.gschema.xml  org.gnome.shell.extensions.dash-to-dock.gschema.xml
ester-plymouth/: ester.plymouth
esteros-updater/: README.md  meson.build  uk.co.esteros.Updater.json
esteros-updater-blueprint/: main.blp  main.js  main.ui  settings
esteros-updater-cli/: main.c
esteros-updater/data/: meson.build  uk.co.esteros.Updater.appdata.xml.in  uk.co.esteros.Updater.desktop.in  uk.co.esteros.Updater.gschema.xml
esteros-updater/data/icons/: meson.build
esteros-updater/po/: POTFILES  meson.build
esteros-updater/src/: esteros-updater-application.c  esteros-updater-application.h  esteros-updater-window.c  esteros-updater-window.h  esteros-updater-window.ui  esteros-updater.gresource.xml  main.c  meson.build
override-files/: 90_ubuntu-settings.gschema.override  ftpix.com.transparentbar.gschema.xml
pixmaps/: ubiquity.xpm
